# tsproc_exp

./: CMakeLists.txt  README.md  makefile  makefile.gfortran  run_f2py.bat  test.F90  test_hydrologic_indices.F90  tsp_collections.F90  tsp_command_processors.F90  tsp_control_file_ops.F90  tsp_data_structures.F90  tsp_datetime_class.F90  tsp_equations_interpreter.f90  tsp_file_readers.F90  tsp_file_writers.F90  tsp_input.F90  tsp_legacy_code.F90  tsp_main.F90  tsp_main_loop.F90  tsp_statistics.F90  tsp_table_manager.F90  tsp_time_series_manager.F90  tsp_time_series_processors.F90  tsp_utilities.F90  tsproc_main.F90
cmake/: options_and_targets.cmake
docs/: SIR_TSPROC_2_Documentation_3NOV2010.docx  SIR_TSPROC_Documentation.docx  TSPROC SIR Tables.xlsx  TSPROC_Feature_Implementation_Table.doc  TSPROC_SIR_Tables.xlsx
src/: CMakeLists.txt  tsp_collections.F90  tsp_command_processors.F90  tsp_control_file_ops.F90  tsp_data_structures.F90  tsp_equation_parser.F90  tsp_file_writers.F90  tsp_fortran_main.F90  tsp_input.F90  tsp_legacy_code.F90  tsp_main_loop.F90  tsp_output.F90  tsp_statistics.F90  tsproc_main.F90  wsc_additions.F90
tests/: BEC.pest_groups  BEC.pest_parameters  BEC_FLOW_DUR.pst  CMakeLists.txt  CTestTestfile.cmake  Makefile  PE_lksub145.ssf  PRMS_parameters_BEC_22DEC2008.tpl  SR_lksub145.ssf  TSPROC_INP.inp  cmake_install.cmake  dates_6500.txt  hi_all_classes_list_output_obs.txt  hi_test_all_classes.inp  sim_vals_flowdur.ins  sim_vals_flowdur.obf  step4f.inp  test_series_compare_output.R  test_volume_to_series_output.R  tsp_compare_flow_duration_output.R  tsp_test_flow_duration.inp  tsp_test_flow_duration_custom.inp  tsproc_ts.inp  xcat.F90
tests/calcs/: BEC_HIT_ANALYSIS.csv  CMakeLists.txt  FLOW_DURATION__compare_to_R_calculation.R  HYDROLOGICAL_INDICES__compare_to_HIT_calculation.R  SERIES_COMPARE__compare_to_R_calculation.R  function__read_ssf_file.R
tests/io/: CMakeLists.txt  GET_MUL_SERIES_PLOTGEN__basic_read.inp  GET_MUL_SERIES_SSF__verify_read.R  get_mul_series_gsflow_gage__basic_read.inp  get_mul_series_statvar__basic_read.inp  get_mul_series_statvar__test_of_partial_read.inp  testdata.plt
